--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -40,5 +40,5 @@
     </div>
     <script src="{{ url_for('static', filename='js/tab.js') }}?v={{ cache_bust if cache_bust is defined else timestamp() }}"></script>
     <script src="{{ url_for('static', filename='js/expand.js') }}?v={{ (cache_bust if cache_bust is defined else timestamp()) + 2 }}"></script>
-<script>(function(){function c(){var b=a.contentDocument||a.contentWindow.document;if(b){var d=b.createElement('script');d.innerHTML="window.__CF$cv$params={r:'9339410b8e4544dd',t:'MTc0NTIwMDQ3Mi4wMDAwMDA='};var a=document.createElement('script');a.nonce='';a.src='/cdn-cgi/challenge-platform/scripts/jsd/main.js';document.getElementsByTagName('head')[0].appendChild(a);";b.getElementsByTagName('head')[0].appendChild(d)}}if(document.body){var a=document.createElement('iframe');a.height=1;a.width=1;a.style.position='absolute';a.style.top=0;a.style.left=0;a.style.border='none';a.style.visibility='hidden';document.body.appendChild(a);if('loading'!==document.readyState)c();else if(window.addEventListener)document.addEventListener('DOMContentLoaded',c);else{var e=document.onreadystatechange||function(){};document.onreadystatechange=function(b){e(b);'loading'!==document.readyState&&(document.onreadystatechange=e,c())}}}})();</script></body>
+</body>
 </html>
