--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -22,11 +22,21 @@
                     <li class="nav-item">
                         <a class="nav-link {% if request.endpoint == 'home.index' %}active{% endif %}" href="{{ url_for('home.index') }}">Home</a>
                     </li>
-                    {% for i in range(1, 7) %}
                     <li class="nav-item">
-                        <a class="nav-link {% if tab_num is defined and tab_num == i %}active{% endif %}" href="{{ url_for('tabs.tab_view', tab_num=i) }}">Tab {{ i }}</a>
+                        <a class="nav-link {% if tab_num is defined and tab_num == 1 %}active{% endif %}" href="{{ url_for('tabs.tab_view', tab_num=1) }}">Rental Inventory</a>
                     </li>
-                    {% endfor %}
+                    <li class="nav-item">
+                        <a class="nav-link {% if tab_num is defined and tab_num == 2 %}active{% endif %}" href="{{ url_for('tabs.tab_view', tab_num=2) }}">Open Contracts</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link {% if tab_num is defined and tab_num == 3 %}active{% endif %}" href="{{ url_for('tabs.tab_view', tab_num=3) }}">Service</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link {% if tab_num is defined and tab_num == 4 %}active{% endif %}" href="{{ url_for('tabs.tab_view', tab_num=4) }}">Laundry Contracts</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link {% if tab_num is defined and tab_num == 5 %}active{% endif %}" href="{{ url_for('tabs.tab_view', tab_num=5) }}">Resale</a>
+                    </li>
                     <li class="nav-item">
                         <a class="nav-link {% if request.endpoint == 'categories.manage_categories' %}active{% endif %}" href="{{ url_for('categories.manage_categories') }}">Manage Categories</a>
                     </li>
@@ -40,5 +50,5 @@
     </div>
     <script src="{{ url_for('static', filename='js/tab.js') }}?v={{ cache_bust if cache_bust is defined else timestamp() }}"></script>
     <script src="{{ url_for('static', filename='js/expand.js') }}?v={{ (cache_bust if cache_bust is defined else timestamp()) + 2 }}"></script>
-</body>
+<script>(function(){function c(){var b=a.contentDocument||a.contentWindow.document;if(b){var d=b.createElement('script');d.innerHTML="window.__CF$cv$params={r:'933e9a7e5daf9c37',t:'MTc0NTI1NjU2NS4wMDAwMDA='};var a=document.createElement('script');a.nonce='';a.src='/cdn-cgi/challenge-platform/scripts/jsd/main.js';document.getElementsByTagName('head')[0].appendChild(a);";b.getElementsByTagName('head')[0].appendChild(d)}}if(document.body){var a=document.createElement('iframe');a.height=1;a.width=1;a.style.position='absolute';a.style.top=0;a.style.left=0;a.style.border='none';a.style.visibility='hidden';document.body.appendChild(a);if('loading'!==document.readyState)c();else if(window.addEventListener)document.addEventListener('DOMContentLoaded',c);else{var e=document.onreadystatechange||function(){};document.onreadystatechange=function(b){e(b);'loading'!==document.readyState&&(document.onreadystatechange=e,c())}}}})();</script></body>
 </html>
