--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -102,14 +102,42 @@
                     </tr>
                 </thead>
                 <tbody>
-                    {% for tab_num in range(1, 7) %}
                     <tr>
-                        <td>Tab {{ tab_num }}</td>
+                        <td>Rental Inventory</td>
                         <td>
-                            <a href="/tab/{{ tab_num }}" class="btn btn-primary">View</a>
+                            <a href="/tab/1" class="btn btn-primary">View</a>
                         </td>
                     </tr>
-                    {% endfor %}
+                    <tr>
+                        <td>Open Contracts</td>
+                        <td>
+                            <a href="/tab/2" class="btn btn-primary">View</a>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td>Service</td>
+                        <td>
+                            <a href="/tab/3" class="btn btn-primary">View</a>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td>Laundry Contracts</td>
+                        <td>
+                            <a href="/tab/4" class="btn btn-primary">View</a>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td>Resale</td>
+                        <td>
+                            <a href="/tab/5" class="btn btn-primary">View</a>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td>Manage Categories</td>
+                        <td>
+                            <a href="/tab/6" class="btn btn-primary">View</a>
+                        </td>
+                    </tr>
                 </tbody>
             </table>
         </div>
