--- a/app/templates/tab.html
+++ b/app/templates/tab.html
@@ -1,6 +1,15 @@
 {% extends 'base.html' %}
 
-{% block title %}Tab {{ tab_num }}{% endblock %}
+{% block title %}
+{% if tab_num == 1 %}Rental Inventory
+{% elif tab_num == 2 %}Open Contracts
+{% elif tab_num == 3 %}Service
+{% elif tab_num == 4 %}Laundry Contracts
+{% elif tab_num == 5 %}Resale
+{% elif tab_num == 6 %}Manage Categories
+{% else %}Tab {{ tab_num }}
+{% endif %}
+{% endblock %}
 
 {% block extra_head %}
 <style>
@@ -10,7 +19,16 @@
 {% endblock %}
 
 {% block content %}
-<h1>Tab {{ tab_num }}</h1>
+<h1>
+    {% if tab_num == 1 %}Rental Inventory
+    {% elif tab_num == 2 %}Open Contracts
+    {% elif tab_num == 3 %}Service
+    {% elif tab_num == 4 %}Laundry Contracts
+    {% elif tab_num == 5 %}Resale
+    {% elif tab_num == 6 %}Manage Categories
+    {% else %}Tab {{ tab_num }}
+    {% endif %}
+</h1>
 
 <div class="row mb-3">
     <div class="col-md-4">
@@ -48,7 +66,11 @@
 <table class="table table-bordered" id="category-table">
     <thead>
         <tr>
+            {% if tab_num == 2 %}
+            <th>Contract Number</th>
+            {% else %}
             <th>Category</th>
+            {% endif %}
             <th>Total Items</th>
             <th>Items on Contracts</th>
             <th>Items in Service</th>
